<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tetingimage"
    tools:context="tk.hackeytech.pushpitha.shoppy.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/export"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/newlist" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/newlist"
        android:text="@string/button1"
        android:textColor="@color/blue"
        android:textSize="20dp"
        android:textStyle="bold"
        android:background="@drawable/border"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/mylists"
        android:text="@string/button2"
        android:textColor="@color/blue"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_below="@id/newlist"
        android:layout_marginTop="20dp"
        android:background="@drawable/border"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/buttonShops"
        android:text="@string/button4"
        android:textColor="@color/blue"
        android:textSize="20dp"
        android:textStyle="bold"
        android:background="@drawable/border"
        android:layout_below="@+id/mylists"
        android:layout_alignLeft="@+id/mylists"
        android:layout_alignStart="@+id/mylists"
        android:layout_marginTop="31dp" />

</RelativeLayout>
